<resources>
    <string name="app_name">Journal App</string>
    <string name="full_name">Full Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="phone">Phone</string>
    <string name="register">Register</string>
    <string name="input_error_name">name required</string>
    <string name="input_error_email">email required</string>
    <string name="input_error_password">password required</string>
    <string name="input_error_phone">phone required</string>
    <string name="input_error_password_length">password should be atleast 6 characters long</string>
    <string name="input_error_phone_invalid">enter a valid phone number</string>
    <string name="registration_success">Registered Successfully</string>
    <string name="input_error_email_invalid">enter a valid email</string>
    <string name="text_view_signup">Don\'t have account? Sign Up</string>
    <string name="login_button">Login</string>
    <string name="text_view_login">Login Here</string>
    <string name="logout">Logout</string>

    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="prompt_password">Password</string>
    <string name="action_settings">Settings</string>
    <string name="category">Category</string>
    <string name="abcd_journal">ABCD JOURNAL</string>
    <string name="a">A</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="alarm">Alarm</string>
    <string name="submit">Submit</string>
    <string name="alarm2">Alarm</string>
    <string name="hour_minute">HH:MM</string>
    <string name="day_month_year">DD/MM/YYYY</string>
    <string name="journal_name">JOURNAL Name</string>
    <string name="today">Today</string>
    <string name="upcoming">Upcoming</string>
    <string name="done_missed">Done/Missed</string>
    <string name="add_journal">Add Journal</string>
    <string name="edit_journal">Edit Journal</string>
    <string name="required_field">Required Field</string>
    <string name="remove_journal">Remove JOURNAL</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="journal_shared_pref">journal_shared_preference</string>
    <string name="is_first_time">isFirstTime</string>
    <string name="loading">Loading…</string>
    <string name="settings">Settings</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="action_close">Dismiss</string>
    <string name="enter_registered_email">Enter your registered email id</string>
    <string name="instructions_sent_to_email">We have sent you instructions to reset your password!</string>
    <string name="failed_to_send_reset_email">Failed to send reset email!</string>
    <string name="failed_to_update_email">Failed to update email!</string>
    <string name="email_updated">Email address is updated. Please sign in with new email id!</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="failed_to_updated_password">Failed to update password!</string>
    <string name="password_updated">Password is updated, sign in with new password!</string>
    <string name="password_is_too_short">Password too short, enter minimum 6 characters</string>
    <string name="reset_password_sent">Reset password email is sent!</string>
    <string name="failed_to_delete_account">Failed to delete your account!</string>
    <string name="profile_deleted">Your profile is deleted:( Create a account now!</string>

</resources>
