...
                android:textColorHint="@android:color/white" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/reset_password_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button_transparent"
            android:layout_marginTop="@dimen/margin_top"
            android:textColor="@color/colorAccent"
            android:text="@string/btn_reset_password" />
...
